<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="example.com.midterm.MainActivity">


    <RelativeLayout
        android:id="@+id/relLayout"
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <EditText
            android:id="@+id/editTextSearchTerm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textViewLimitLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editTextSearchTerm"
            android:text="@string/limit_lbl" />

        <TextView
            android:id="@+id/textViewLimitValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextSearchTerm"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_toEndOf="@+id/textViewLimitLabel"
            android:layout_toRightOf="@+id/textViewLimitLabel"
            android:text="10" />

        <SeekBar
            android:id="@+id/seekBarLimit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextSearchTerm"
            android:layout_toRightOf="@+id/textViewLimitValue"
            android:layout_toEndOf="@+id/textViewLimitValue"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/seekBarLimit"
            android:layout_marginLeft="23dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="12dp"
            android:text="@string/serach" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:layout_alignBaseline="@+id/buttonSearch"
            android:layout_alignBottom="@+id/buttonSearch"
            android:layout_alignRight="@+id/seekBarLimit"
            android:layout_alignEnd="@+id/seekBarLimit"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp" />

        <TextView
            android:id="@+id/textViewSortBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/buttonSearch"
            android:layout_marginTop="18dp"
            android:text="@string/sort_by" />

        <TextView
            android:id="@+id/textViewPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewSortBy"
            android:layout_alignBottom="@+id/textViewSortBy"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/textViewLimitValue"
            android:layout_toRightOf="@+id/textViewLimitValue"
            android:text="@string/price" />

        <Switch
            android:id="@+id/switchSorting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textViewPrice"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/buttonSearch"
            android:layout_toRightOf="@+id/buttonSearch" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_alignTop="@+id/switchSorting"
            android:layout_alignRight="@+id/seekBarLimit"
            android:layout_alignEnd="@+id/seekBarLimit" />

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/switchSorting"
            android:layout_marginTop="26dp"
            android:gravity="center"
            android:text="@string/result"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/sv_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textViewResult"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="13dp"
            android:background="@drawable/border">

        </ScrollView>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
